2002-07-18  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/bezier_conn.c: 
	* lib/beziershape.c (beziershape_set_points): 
	* lib/bezier_conn.h: 
	* lib/beziershape.h: 
	Support for creating beziers non-interactively.

2002-07-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xfig/xfig-import.c: Support for polygons and
	polylines.  Special warning handling system removed.

	* lib/message.c (gtk_message_internal): Fixed bug involving
	closing message window and then getting repeated message.

	* Makefile.am: 
	* autogen.sh: 
	* configure.in (GETTEXT_PACKAGE): 
	Update based on bug #88199.  Hopefully this doesn't break too much
	intl stuff.

	* dia.desktop.in (_Comment): Changed after suggestion from
	calum.benson@ireland.sun.com (bug 88345)

	* app/sheets_dialog_callbacks.c: Fix from Dolores Alia de Saravia
	<loli@unsa.edu.ar> that makes user/system distinction better.

2002-07-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_libart.c: Got the context right, removed crashes.

	* app/commands.c: 
	* app/commands.h: 
	Redraw menu item.

	* app/display.c: 
	* app/display.h: 
	* app/interface.c: 
	* app/menus.c: 
	Remove libart #defines from most places (still around for png export).

	* app/render_libart.h: 
	* app/render_libart.c: 
	* configure.in (HAVE_LIBART): 
	Starting on update of libart stuff for png export (without X).

	* app/autosave.h (autosave_check_autosave): 
	* app/load_save.h: 
	* app/diagram.h: 
	* app/Makefile.am (dia_core_files): 
	* app/load_save.c: 
	* app/diagram.c (diagram_set_modified): 
	* app/autosave.c: 
	* app/app_procs.c (app_init): 
	Autosave support.  No automatic restore yet.

2002-07-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c (create_eps_renderer): #ifdef'd a scale
	assignment. 
	
2002-07-15  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/interface.c (fill_sheet_menu): Tear-off for sheets menu.

2002-07-15  Andrew Ferrier  <andrew@new-destiny.co.uk>

	* Fix for 'make dist' etc. --- problem caused by