@@ -1,5 +1,7 @@
 2002-07-18  Lars Clausen  <lrclause@cs.uiuc.edu>
 
+	* objects/standard/create.h: 
+	* objects/standard/bezier.c (bezierline_create): 
 	* lib/bezier_conn.c: 
 	* lib/beziershape.c (beziershape_set_points): 
 	* lib/bezier_conn.h: 
